# radlib

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md
data/rcslw_data/: .gitignore  CMakeLists.txt  README.md  co2_p0_1.txt  co2_p0_25.txt  co2_p15_0.txt  co2_p1_0.txt  co2_p2_0.txt  co2_p30_0.txt  co2_p4_0.txt  co_p0_1.txt  co_p15_0.txt  co_p1_0.txt  co_p50_0.txt  writebin.cc
docs/: CMakeLists.txt  Doxyfile  custom.css  extra-stuff.sty  footer.html  header.html  index.html  mainpage.dox  mainpage.md  refs.bib
docs/doxygen/: .gitignore
docs/doxygen-awesome-css/: doxygen-awesome.css
examples/: ex_1.cc  ex_1.py  ex_2.cc  ex_4.cc  ex_5.cc  make_and_run_examples.sh  makeit  parallel_planes.cc  parallel_planes.py  simple_interface.py
examples/c++/: CMakeLists.txt  README.md  ex_B3.cc  ex_S1.cc  ex_S2.cc  ex_S3.cc  ex_S4.cc  ex_S5.cc  ex_Sb1.cc  make_and_run_examples.sh  make_examples.sh  parallel_planes.cc  run_examples.sh  simple_interface.cc
examples/fortran/: CMakeLists.txt  README.md  simple_interface_fort.f90
examples/julia/: simple_interface.jl  test.jl
examples/python/: .gitignore  CMakeLists.txt  README.md  cyparallel_planes.pyx  ex_1.py  ex_2.py  ex_3.py  ex_4.py  ex_5.py  ex_B3.py  ex_S1.py  ex_S2.py  ex_S3.py  ex_S4.py  ex_S5.py  ex_Sb1.py  get_pythonpath_command.py.in  parallel_planes.py  run_and_plot_examples.ipynb  setup.py  setup.py.in  simple_interface.py
source/: CMakeLists.txt
source/c++/: CMakeLists.txt  multilinear_interpolation.h  rad.h  rad_planck_mean.cc  rad_planck_mean.h  rad_rcslw.cc  rad_rcslw.h  rad_wsgg.cc  rad_wsgg.h
source/c++/rcslw_data/: README  co2_p0_5.txt  co2_p50_0.txt  co2_p8_0.txt  co_p0_25.txt  co_p0_5.txt  co_p2_0.txt  co_p30_0.txt  co_p4_0.txt  co_p8_0.txt
source/fortran/: CMakeLists.txt  build.sh  c_interface.cc  main.f90  rad_module.f90
source/python/: .gitignore  CMakeLists.txt  clean.sh  get_pythonpath_command.py.in  pyrad.pyx  setup.py  setup.py.in
src/c++/: CMakeLists.txt  multilinear_interpolation.h  rad.h  radPropModel.h  rad_planck_mean.cc  rad_planck_mean.h  rad_rcslw.cc  rad_rcslw.h  rad_wsgg.cc  rad_wsgg.h  radlibConfig.cmake
src/fortran/: CMakeLists.txt  c_interface.cc  rad_module.f90  radlib_fortranConfig.cmake
src/julia/: CMakeLists.txt  radlib.jl  radlib_julia.cc
src/python/: CMakeLists.txt  get_pythonpath_command.py  pyrad.pyx  setup.py.in
